@@ -14,6 +14,8 @@ Version 3.0.0b4 - xx xxx 2009
   * Metadata Editor should render tree in Alpha order.
     Ticket #48.
   * Added Activation. Ticket #49.
+  * COMPACT Fomat Delimiter found in data stream breaks
+    response. Ticket #51.
 
 Version 3.0.0b3 - 29 Apr 2009
 
